--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.jumbotron {
-  padding-top: 7rem;
+.home {
+  padding-top: 11rem;
   padding-bottom: 5rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: 1rem;
+  padding-right: 4rem;
   background-color: #ffffff;
 }
 
